force-app/main/default/objects/Hospitals__c/Hospitals__c.object-meta.xml
<CustomObject>
    <label>Hospitals</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Hospitals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>