force-app/main/default/objects/Hospitals__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>20</length>
    <type>Text</type>
</CustomField>