force-app/main/default/objects/Hospitals__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Website</label>
    <length>25</length>
    <type>Text</type>
</CustomField>