force-app/main/default/objects/Hospitals__c/listViews/Cardio_and_Ortho_Hospitals.listView-meta.xml
<ListView>
    <fullName>Cardio_and_Ortho_Hospitals</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Type__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Cardio</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Ortho</value>
    </filters>
    <label>Cardio and Ortho Hospitals</label>
</ListView>