force-app/main/default/objects/Hospitals__c/listViews/Hospital_in_NYC.listView-meta.xml
<ListView>
    <fullName>Hospital_in_NYC</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Email__c</columns>
    <columns>Location__Latitude__s</columns>
    <columns>Location__Longitude__s</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>within</operation>
        <value>40.73061:-73.935242:50:mi</value>
    </filters>
    <label>Hospital in NYC</label>
</ListView>